--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -66,7 +66,7 @@ p {
   width: 70%;
   height: 45px;
   background-color: #e4e4e4;
-  margin: 40px auto;
+  margin: 0 auto 40px;
 }
 
 #triangle-right {
